--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2536,7 +2536,7 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #5e42a6;
+					color: #2b3a52;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
