--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3236,7 +3236,7 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #111927;
+			background-color: #141d2b;
 		}
 
 		.wrapper.style1 {
