--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2523,9 +2523,9 @@ input, select, textarea {
 			width: 2.5em;
 			height: 2.5em;
 			display: block;
-			background: #ffffff;
+			background: #a4b1cd;
 			border-radius: 100%;
-			color: #312450;
+			color: #9fef00;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
