--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2556,7 +2556,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style3-alt .icon.major:before {
-					color: #953d75;
+					color: #9fef00;
 				}
 
 /* Image */
