--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2501,6 +2501,7 @@ input, select, textarea {
 			text-transform: none !important;
 			font-family: 'Font Awesome 5 Free';
 			font-weight: 400;
+			color: #9fef00;
 		}
 
 		.icon > .label {
